crates/lang/macro/tests/ui/trait_def/fail/message_input_pattern_invalid.stderr
error[E0642]: patterns aren't allowed in functions without bodies
 --> $DIR/message_input_pattern_invalid.rs:6:23
  |
6 |     fn message(&self, (a, b): (i32, i32));
  |                       ^^^^^^ pattern not allowed in function without body
